<resources>
    <string name="app_name">Ingoma tourism</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lbl_share">Share</string>
    <string name="htl_filter">Filter</string>
    <string name="filters">Filters</string>
    <string name="htl_sort">Sort</string>
    <string name="location">Location</string>
    <string name="htl_sort_by">Sort By</string>
    <string name="srp_card_hotel">Hotel</string>
    <string name="edit">Edit</string>
    <string name="sort_by">Sort By</string>
    <string name="starts_from">Starts from</string>
    <string name="no_hotel_found">No hotel found</string>
    <string name="modify_search">Modify Search</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="filter">Filter</string>
    <string name="the_property_is_not_available_on_your_selected_dates">The property is not available on your selected dates.</string>
    <string name="check_now">Check Now</string>
    <string name="added_to">Added to</string>
    <string name="saved_un">Saved</string>
    <string name="get_points">Get Points</string>
    <string name="popular">Popular</string>
    <string name="premium">Premium</string>
    <string name="select">Select</string>
    <string name="special">Special</string>
    <string name="free_cancellation">Free Cancellation*</string>
    <string name="free_breakfast_lunch_dinner">Free Breakfast, Lunch &amp; Dinner</string>
    <string name="room_remaining">%1$d Rooms Remaining</string>
    <string name="couple_friendly">Couple Friendly</string>
    <string name="bdt">BDT</string>
    <string name="for_1_night_per_room">for 1 Night, per room</string>
    <string name="like_what_u_see">Like what you see? See more properties like this</string>
    <string name="amenities">Amenities</string>

    <string name="review_title_mr">Mr.</string>
    <string name="review_title_mrs">Mrs.</string>
    <string name="review_title_ms">Ms.</string>
    <string name="regular">regular</string>
</resources>