<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:tools="http://schemas.androidly.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:tools2="http://schemas.android.com/tools"
    android:id="@+id/lytRoomParentInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#222222"
            android:id="@+id/tvParentRoomHeading"
            android:layout_width="match_parent"
            android:text="@string/amenities"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            app:layout_constraintHorizontal_bias="0"
            style="@style/TextStyles.Label.Medium.w3"/>

        <LinearLayout
            android:id="@+id/nanga"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:id="@+id/linearLayoutCompat"
                android:paddingBottom="@dimen/padding_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/ll_star">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.4">

                    <WebView
                        android:id="@+id/mlv_goods_detail_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        tools2:ignore="WebViewLayout" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.6">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_gravity="end"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textColor="@color/colorPrimary"
                            android:ellipsize="end"
                            android:text="70 000"
                            android:id="@+id/tv_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"

                            android:letterSpacing="-0.027"
                            style="@style/H2BoldTextAppearance" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textSize="10sp"
                            android:textColor="@color/colorPrimary"
                            android:ellipsize="end"
                            android:gravity="end"
                            android:id="@+id/tv_bdt_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bdt"
                            android:maxLines="1"
                            android:fontFamily="@font/gilroy_bold"
                            android:layout_marginStart="4dp"
                            app:fontFamily="@font/avenir_semi_bold"
                            style="@style/H5TextAppearance" />

                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:textColor="@color/colorTextPrimary"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:id="@+id/tv_day_or_night_to_stay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/for_1_night_per_room"
                        android:maxLines="1"
                        app:fontFamily="@font/avenir_regular"
                        style="@style/H5Avenir" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:textSize="8dp"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="end"
                        android:id="@+id/tv_discount"
                        android:background="@drawable/orange_bg"
                        android:text="Select"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        app:textAllCaps="true"
                        style="@style/H5Avenir" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>