<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:background="@color/hotelListBg"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_gravity="center_vertical"
        android:id="@+id/ivBack"
        android:background="@color/colorTransparent"
        android:padding="@dimen/padding_16"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left_white"
        android:scaleType="fitCenter"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        app:layout_constraintBottom_toBottomOf="@+id/tv_flight_date_sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_toolbar_title"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_vertical"
        android:id="@+id/iv_edit"
        android:background="@color/colorTransparent"
        android:padding="8dp"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        android:scaleType="fitStart"
        android:text="@string/edit"
        android:drawableTop="@drawable/ic_edit_white"
        android:drawablePadding="4dp"
        android:layout_centerVertical="true"
        android:paddingEnd="@dimen/padding_16"
        android:layout_alignParentEnd="true"
        app:layout_constraintBottom_toBottomOf="@+id/tv_flight_date_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_toolbar_title"
        style="@style/H3Avenir"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:ellipsize="end"
        android:id="@+id/tv_toolbar_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:maxLines="1"
        android:text="@string/app_name"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_edit"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toTopOf="0"
        style="@style/ToolbarTitleStyle"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="10sp"
        android:textColor="@color/colorStroke"
        android:ellipsize="end"
        android:id="@+id/tv_flight_date_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="@+id/tv_toolbar_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_toolbar_title"
        style="@style/H3Avenir"/>
    <View android:id="@+id/view_date_sub"
        android:background="@color/colorStroke"
        android:layout_width="0.8dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_flight_date_sub"
        app:layout_constraintStart_toEndOf="@+id/tv_flight_date_sub"
        app:layout_constraintTop_toTopOf="@+id/tv_flight_date_sub"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="10sp"
        android:textColor="@color/colorStroke"
        android:ellipsize="end"
        android:id="@+id/tv_no_of_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/app_name"
        android:drawablePadding="2dp"
        android:layout_marginStart="2dp"
        app:drawableStartCompat="@drawable/ic_room"
        app:layout_constraintBottom_toBottomOf="@+id/tv_flight_date_sub"
        app:layout_constraintStart_toEndOf="@+id/view_date_sub"
        app:layout_constraintTop_toTopOf="@+id/tv_flight_date_sub"
        style="@style/H3Avenir"/>
    <View
        android:id="@+id/view_room"
        android:background="@color/colorStroke"
        android:layout_width="0.8dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_no_of_room"
        app:layout_constraintStart_toEndOf="@+id/tv_no_of_room"
        app:layout_constraintTop_toTopOf="@+id/tv_no_of_room"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="10sp"
        android:textColor="@color/colorStroke"
        android:ellipsize="end"
        android:id="@+id/tv_no_of_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:drawablePadding="4dp"
        android:layout_marginStart="2dp"
        app:drawableStartCompat="@drawable/ic_user_white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_flight_date_sub"
        app:layout_constraintStart_toEndOf="@+id/view_room"
        app:layout_constraintTop_toTopOf="@+id/tv_flight_date_sub"
        style="@style/H3Avenir"/>
    <View
        android:id="@+id/view_toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_flight_date_sub"
        app:layout_constraintEnd_toEndOf="@+id/tv_toolbar_title"
        app:layout_constraintStart_toStartOf="@+id/tv_toolbar_title"
        app:layout_constraintTop_toTopOf="@+id/tv_toolbar_title"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/some_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_toolbar">

        <androidx.appcompat.widget.AppCompatTextView
            android:textColor="@color/colorWhite"
            android:id="@+id/tv_sort_by"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sort_by"
            android:drawablePadding="6dp"
            android:drawableStart="@drawable/ic_hotel_search_result_sort_by"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/padding_16"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/H3Avenir"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:textColor="@color/colorWhite"
            android:id="@+id/tv_view_on_map"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="View Map"
            android:drawablePadding="6dp"
            android:drawableStart="@drawable/on_map"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/padding_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/H3Avenir"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relative_search_not_available_layout"
        android:background="@drawable/relative_search_data_not_found"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginEnd="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_title">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:id="@+id/iv_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_warning"
            android:scaleType="fitCenter"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_relative_search_text"
            app:layout_constraintEnd_toStartOf="@+id/tv_relative_search_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_relative_search_text"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="13sp"
            android:textColor="@color/colorWhite"
            android:ellipsize="end"
            android:layout_gravity="center"
            android:id="@+id/tv_relative_search_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="The property is not available on your selected dates."
            android:maxLines="2"
            app:layout_constraintBottom_toBottomOf="0"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toEndOf="@+id/iv_warning"
            app:layout_constraintTop_toTopOf="0"
            style="@style/H2BoldTextAppearance"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:ellipsize="end"
        android:id="@+id/tv_similar_properties_title"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="Similar properties in this area:"
        android:maxLines="2"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginEnd="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_search_not_available_layout"
        style="@style/ToolbarTitleStyle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_hotel"
        android:paddingBottom="16dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="@dimen/padding_16"
        android:nestedScrollingEnabled="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_similar_properties_title"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_similar_properties_title"
        app:shimmer_base_color="@color/colorWhite"
        app:shimmer_direction="bottom_to_top"
        app:shimmer_highlight_alpha="0.6"
        app:shimmer_highlight_color="@color/colorBG"
        app:shimmer_tilt="0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginEnd="@dimen/padding_16">
            <include layout="@layout/hotel_search_result_item_shimmer"/>
            <include android:id="@+id/shimmer_item_2" layout="@layout/hotel_search_result_item_shimmer"/>
            <include android:id="@+id/shimmer_item_3" layout="@layout/hotel_search_result_item_shimmer"/>
            <include android:id="@+id/shimmer_item_4" layout="@layout/hotel_search_result_item_shimmer"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_search"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.AppCompat.ProgressBar"/>

    <ImageView
        android:id="@+id/imageViewNoResult"
        android:visibility="gone"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/tv_no_result"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="0"
        app:layout_constraintTop_toTopOf="0"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_no_hotel_result"/>
    <TextView
        android:textSize="22sp"
        android:textColor="@color/colorWhite"
        android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/tv_no_result"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:text="@string/no_hotel_found"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewNoResult"
        style="@style/H1Avenir"/>

    <Button
        android:id="@+id/btn_explore_hotel"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/modify_search"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="0"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/btn_clear_filter"
        style="@style/SecondaryButtonStyle"/>
    <Button
        android:id="@+id/btn_clear_filter"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/reset_filter"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="0"
        app:layout_constraintEnd_toStartOf="@+id/btn_explore_hotel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="0"
        style="@style/SecondaryButtonStyle"/>
    <com.google.android.material.button.MaterialButton
        android:textColor="@color/colorTextPrimary"
        android:gravity="center"
        android:layout_gravity="bottom|center_vertical|center_horizontal|center"
        android:id="@+id/btn_filter"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:text="@string/filter"
        android:drawablePadding="8dp"
        android:textAllCaps="false"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="@dimen/padding_16"
        android:backgroundTint="@color/colorAccent"
        app:fontFamily="@font/gilroy_bold"
        app:icon="@drawable/ic_filter"
        app:iconTint="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.Button.Icon"/>


</androidx.constraintlayout.widget.ConstraintLayout>